# invenio-vocabularies

./: .editorconfig  .git-blame-ignore-revs  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  gen-migration.sh  pytest.ini  requirements-devel.txt  requirements-feature.txt  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests-feature.yaml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_vocabularies/: __init__.py  api.py  cli.py  config.py  ext.py  factories.py  fixtures.py  jobs.py  proxies.py  version.py  views.py  webpack.py
invenio_vocabularies/administration/: __init__.py
invenio_vocabularies/administration/views/: __init__.py  vocabularies.py
invenio_vocabularies/alembic/: 17c703ce1eb7_create_names_table.py  1d3302223885_create_vocabularies_subtype.py  3ba812d80559_add_internal_name_id.py  3d362de4926a_create_funders_table.py  4a9a4fd235f8_create_vocabulary_schemes.py  4f365fced43f_create_vocabularies_tables.py  55a700f897b6_add_names_and_afiliations_pid_column.py  6312f33645c1_create_affiliations_table.py  676dd587542d_create_funders_vocabulary_table.py  8a91f4cfedd2_removes_internal_id_from_name_metadata.py  8ff82dfb0be8_create_vocabularies_branch.py  __init__.py  af2457652217_drop_unique_constraint_from_internal_id.py  d00af88aac94_change_datetime_types.py  e1146238edd3_create_awards_table.py
invenio_vocabularies/contrib/: __init__.py
invenio_vocabularies/contrib/affiliations/: __init__.py  affiliations.py  api.py  config.py  datastreams.py  facets.py  models.py  pidprovider.py  resources.py  schema.py  services.py
invenio_vocabularies/contrib/awards/: __init__.py  api.py  awards.py  config.py  datastreams.py  models.py  resources.py  schema.py  serializer.py  services.py
invenio_vocabularies/contrib/common/: __init__.py  utils.py
invenio_vocabularies/contrib/funders/: __init__.py  api.py  config.py  datastreams.py  facets.py  funders.py  models.py  resources.py  schema.py  serializer.py  services.py
invenio_vocabularies/contrib/names/: __init__.py  api.py  components.py  config.py  datasources.py  datastreams.py  models.py  names.py  permissions.py  resources.py  s3client.py  schema.py  services.py
invenio_vocabularies/contrib/subjects/: __init__.py  api.py  config.py  datastreams.py  facets.py  models.py  permissions.py  resources.py  schema.py  services.py  subjects.py
invenio_vocabularies/custom_fields/: __init__.py
invenio_vocabularies/data/: languages.json  licenses.csv  licenses.json  subjects.csv
invenio_vocabularies/datastreams/: __init__.py  datastreams.py  errors.py  factories.py  models.py  readers.py  tasks.py  transformers.py  writers.py  xml.py
invenio_vocabularies/fixtures/: __init__.py  datastreams.py  errors.py  factories.py  fixtures.py  writers.py
invenio_vocabularies/importers/: __init__.py  base.py  errors.py  iterators.py  local.py  prioritized.py  tasks.py
invenio_vocabularies/importers/entries/: __init__.py  base.py  entry.py  nested.py
invenio_vocabularies/jsonschemas/: __init__.py
invenio_vocabularies/jsonschemas/vocabularies/: vocabulary-v1.0.0.json
invenio_vocabularies/mappings/: __init__.py
invenio_vocabularies/mappings/v6/: __init__.py
invenio_vocabularies/mappings/v7/: __init__.py
invenio_vocabularies/records/: __init__.py  api.py  dumper_extensions.py  models.py  permissions.py  pidprovider.py  resolvers.py  resource.py  service.py  views.py
invenio_vocabularies/records/jsonschemas/: __init__.py
invenio_vocabularies/records/mappings/: __init__.py
invenio_vocabularies/records/systemfields/: VocabularyTypeField.py  __init__.py  pid.py  relations.py
invenio_vocabularies/resources/: __init__.py  config.py  resource.py  schema.py  serializer.py
invenio_vocabularies/resources/records/: __init__.py  resource.py  schema.py
invenio_vocabularies/resources/serializers/: __init__.py  schema.py
invenio_vocabularies/services/: __init__.py  components.py  config.py  datasources.py  facets.py  generators.py  permissions.py  querystr.py  results.py  schema.py  service.py  tasks.py
invenio_vocabularies/services/custom_fields/: __init__.py  subject.py  vocabulary.py
invenio_vocabularies/services/facets/: __init__.py  facets.py  labels.py
invenio_vocabularies/services/records/: __init__.py  components.py  permissions.py  schema.py  service.py
invenio_vocabularies/templates/invenio_vocabularies/: base.html  index.html
invenio_vocabularies/translations/: messages.pot
tests/: __init__.py  conftest.py  test_alembic.py  test_api_backend.py  test_api_resource_type.py  test_cli.py  test_factory.py  test_invenio_vocabularies.py  test_propagate_updates.py  test_registry.py
tests/contrib/affiliations/: conftest.py  test_affiliations_api.py  test_affiliations_datastreams.py  test_affiliations_jsonschema.py  (+3 more)
tests/custom_fields/: test_custom_fields.py
tests/datastreams/: conftest.py  test_datastreams.py  test_datastreams_tasks.py  test_fixtures.py  test_readers.py  test_transformers.py  test_writers.py  vocabularies.yaml
tests/fixtures/: conftest.py  test_datastreams.py  test_fixtures.py  vocabularies.yaml
tests/mock_module/: __init__.py  api.py  models.py
tests/records/: conftest.py  test_api.py  test_jsonschema.py  test_models.py  test_relationship.py
tests/resources/: conftest.py  test_links_schema.py  test_resources_get.py  test_resources_l10n.py  test_resources_list.py  test_resources_localization.py  test_resources_read.py  test_resources_search.py  test_resources_serialization.py  test_tasks_resources.py  test_vocabularies_admin_resource.py  test_vocabularies_resource.py
tests/services/: conftest.py  test_facets.py  test_labels.py  test_permissions.py  test_schema.py  test_service.py
tests/vocabularies/: __init__.py  conftest.py  test_api.py  test_links_schema.py  test_resources.py  test_resources_serialization.py
(+270 files in other folders)
