# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2022 CERN.
# Copyright (C) 2021 Graz University of Technology.
#
# Invenio-Vocabularies is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-vocabularies
version = attr: invenio_vocabularies.__version__
description = "Invenio module for managing vocabularies."
long_description = file: README.rst, CHANGES.rst
keywords = invenio vocabulary management
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-vocabularies
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    invenio-records-resources>=0.19.9,<0.20.0
    lxml>=4.5.0
    PyYAML>=5.4.1

[options.extras_require]
tests =
    invenio-app>=1.3.3
    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0.0
    pytest-invenio>=1.4.7
    Sphinx>=3,<4
elasticsearch6 =
    invenio-search[elasticsearch6]>=1.4.2,<2.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=1.4.2,<2.0
# Kept for backwards compatibility:
mysql =
postgresql =
sqllite =

[options.entry_points]
flask.commands =
    vocabularies = invenio_vocabularies.cli:vocabularies
invenio_base.apps =
    invenio_vocabularies = invenio_vocabularies:InvenioVocabularies
invenio_base.api_apps =
    invenio_vocabularies = invenio_vocabularies:InvenioVocabularies
invenio_base.api_blueprints =
    invenio_vocabularies = invenio_vocabularies.views:create_blueprint_from_app
invenio_db.alembic =
    invenio_vocabularies = invenio_vocabularies:alembic
invenio_db.models =
    vocabulary_model = invenio_vocabularies.records.models
invenio_jsonschemas.schemas =
    jsonschemas = invenio_vocabularies.records.jsonschemas
invenio_search.mappings =
    vocabularies = invenio_vocabularies.records.mappings
invenio_i18n.translations =
    invenio_vocabularies = invenio_vocabularies


[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py

[compile_catalog]
directory = invenio_vocabularies/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_vocabularies/translations/messages.pot

[init_catalog]
input-file = invenio_vocabularies/translations/messages.pot
output-dir = invenio_vocabularies/translations/

[update_catalog]
input-file = invenio_vocabularies/translations/messages.pot
output-dir = invenio_vocabularies/translations/
