# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2024 CERN.
# Copyright (C) 2022-2024 Graz University of Technology.
#
# Invenio-Vocabularies is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-vocabularies
version = attr: invenio_vocabularies.__version__
description = Invenio module for managing vocabularies.
long_description = file: README.rst, CHANGES.rst
keywords = invenio vocabulary management
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-vocabularies
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-i18n>=3.0.0,<4.0.0
    invenio-records-resources>=7.0.0,<8.0.0
    invenio-administration>=3.0.0,<4.0.0
    invenio-jobs>=3.0.0.dev2,<4.0.0
    lxml>=4.5.0
    # Upper pinning pycountry due to commonmeta-py
    pycountry>=22.3.5,<23.0.0
    PyYAML>=5.4.1
    regex>=2024.7.24
    SPARQLWrapper>=2.0.0

[options.extras_require]
s3fs =
    s3fs>=2024.6.1
oaipmh =
    invenio-oaipmh-scythe>=0.13.0
rdf =
    rdflib>=7.0.0
sparql =
    SPARQLWrapper>=2.0.0
tests =
    pytest-black-ng>=0.4.0
    invenio-app>=2.0.0,<3.0.0
    invenio-db[postgresql,mysql]>=2.0.0,<3.0.0
    pytest_httpserver>=1.0.10
    pytest-invenio>=3.0.0,<4.0.0
    Sphinx>=4.5
elasticsearch7 =
    invenio-search[elasticsearch7]>=3.0.0,<4.0.0
opensearch1 =
    invenio-search[opensearch1]>=3.0.0,<4.0.0
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0
# Kept for backwards compatibility:
mysql =
postgresql =
sqlite =

[options.entry_points]
flask.commands =
    vocabularies = invenio_vocabularies.cli:vocabularies
invenio_administration.views =
    vocabularies_list = invenio_vocabularies.administration.views.vocabularies:VocabulariesListView
invenio_base.apps =
    invenio_vocabularies = invenio_vocabularies:InvenioVocabularies
invenio_base.api_apps =
    invenio_vocabularies = invenio_vocabularies:InvenioVocabularies
invenio_base.blueprints =
    invenio_vocabularies_ext = invenio_vocabularies.views:blueprint
invenio_base.api_blueprints =
    invenio_vocabularies = invenio_vocabularies.views:create_blueprint_from_app
    invenio_vocabularies_affiliations = invenio_vocabularies.views:create_affiliations_blueprint_from_app
    invenio_vocabularies_awards = invenio_vocabularies.views:create_awards_blueprint_from_app
    invenio_vocabularies_funders = invenio_vocabularies.views:create_funders_blueprint_from_app
    invenio_vocabularies_names = invenio_vocabularies.views:create_names_blueprint_from_app
    invenio_vocabularies_subjects = invenio_vocabularies.views:create_subjects_blueprint_from_app
    invenio_vocabularies_ext = invenio_vocabularies.views:blueprint
    invenio_vocabularies_list =  invenio_vocabularies.views:create_list_blueprint_from_app
invenio_base.api_finalize_app =
    invenio_vocabularies = invenio_vocabularies.ext:api_finalize_app
invenio_base.finalize_app =
    invenio_vocabularies = invenio_vocabularies.ext:finalize_app
invenio_db.alembic =
    invenio_vocabularies = invenio_vocabularies:alembic
invenio_db.models =
    affiliations = invenio_vocabularies.contrib.affiliations.models
    awards = invenio_vocabularies.contrib.awards.models
    funders = invenio_vocabularies.contrib.funders.models
    names = invenio_vocabularies.contrib.names.models
    subjects = invenio_vocabularies.contrib.subjects.models
    vocabulary_model = invenio_vocabularies.records.models
invenio_jsonschemas.schemas =
    affiliations = invenio_vocabularies.contrib.affiliations.jsonschemas
    awards = invenio_vocabularies.contrib.awards.jsonschemas
    funders = invenio_vocabularies.contrib.funders.jsonschemas
    jsonschemas = invenio_vocabularies.records.jsonschemas
    names = invenio_vocabularies.contrib.names.jsonschemas
    subjects = invenio_vocabularies.contrib.subjects.jsonschemas
invenio_search.mappings =
    affiliations = invenio_vocabularies.contrib.affiliations.mappings
    awards = invenio_vocabularies.contrib.awards.mappings
    funders = invenio_vocabularies.contrib.funders.mappings
    names = invenio_vocabularies.contrib.names.mappings
    subjects = invenio_vocabularies.contrib.subjects.mappings
    vocabularies = invenio_vocabularies.records.mappings
invenio_assets.webpack =
    invenio_vocabularies = invenio_vocabularies.webpack:theme
invenio_i18n.translations =
    invenio_vocabularies = invenio_vocabularies
invenio_celery.tasks =
    invenio_vocabularies_services = invenio_vocabularies.services.tasks
invenio_jobs.jobs =
    process_ror_affiliations = invenio_vocabularies.jobs:ProcessRORAffiliationsJob
    process_ror_funders = invenio_vocabularies.jobs:ProcessRORFundersJob
    import_awards_openaire = invenio_vocabularies.jobs:ImportAwardsOpenAIREJob
    update_awards_cordis = invenio_vocabularies.jobs:UpdateAwardsCordisJob
    import_orcid_names = invenio_vocabularies.jobs:ImportORCIDJob

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_vocabularies/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_vocabularies/translations/messages.pot

[init_catalog]
input-file = invenio_vocabularies/translations/messages.pot
output-dir = invenio_vocabularies/translations/

[update_catalog]
input-file = invenio_vocabularies/translations/messages.pot
output-dir = invenio_vocabularies/translations/

[isort]
profile = black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_vocabularies --cov-report=term-missing
testpaths = tests invenio_vocabularies
